--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <img src="https://avatarko.ru/img/kartinka/1/Crazy_Frog.jpg" width="450px" height="330px"/>
     </main>
     <footer>
+      <h1>Спасибо за внимание!</h1>
     </footer>
   </body>
 </html>
